--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
-language: cpp
+#language: cpp
 os: 
   - windows
 #  - linux
 #find libace dependency and or make script
 install: 
-  - choco feature enable -n allowEmptyChecksums
-  - choco install tbb
-  - choco install cmake
-  - choco install git
+  - powershell -Command wget "http://github.com/DOCGroup/ACE_TAO/releases/download/ACE%2BTAO-6_5_8/ACE-6.5.8.zip" -OutFile "C:\ACE.zip"
+  - powershell -Command Expand-Archive -LiteralPath C:\ACE.zip -DestinationPath C:\
+  - powershell -Command Set-Content 'C:\ACE_wrappers\ace\config.h' -Value '#include "ace/config-win32.h"'
+  - powershell -Command wget "https://github.com/oneapi-src/oneTBB/releases/download/v2020.2/tbb-2020.2-win.zip" -OutFile "C:\tbb.zip"
+  - powershell -Command Expand-Archive -LiteralPath C:\tbb.zip -DestinationPath C:\ 
+#- choco install cmake
+#- choco install git
 #- choco install visualstudio2019community
 #- choco install visualstudio2019-workload-nativedesktop
 #- export VS160COMNTOOLS="/c/Program Files (x86)/Microsoft Visual Studio/2019/Community/Common7/Tools"
@@ -16,3 +19,4 @@ install:
 
 #build:
 #  - powershell cmake -G "Visual Studio 16 2019" -A x64  
+#powershell -Command Set-MpPreference -DisableBehaviorMonitoring \$true
