--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ os:
 install: 
   - powershell -Command wget "http://github.com/DOCGroup/ACE_TAO/releases/download/ACE%2BTAO-6_5_8/ACE-6.5.8.zip" -OutFile "ACE.zip"
   - powershell -Command Expand-Archive -LiteralPath ACE.zip -DestinationPath .
-  - powershell -Command Set-Content 'C:\ACE_wrappers\ace\config.h' -Value '#include "ace/config-win32.h"'
+  - powershell -Command Set-Content '.\ACE_wrappers\ace\config.h' -Value '#include "ace/config-win32.h"'
   - powershell -Command wget "https://github.com/oneapi-src/oneTBB/releases/download/v2020.2/tbb-2020.2-win.zip" -OutFile "tbb.zip"
   - powershell -Command Expand-Archive -LiteralPath tbb.zip -DestinationPath .
 #- choco install cmake
@@ -14,9 +14,9 @@ install:
 #- choco install visualstudio2019community
 #- choco install visualstudio2019-workload-nativedesktop
 #- export VS160COMNTOOLS="/c/Program Files (x86)/Microsoft Visual Studio/2019/Community/Common7/Tools"
-#- export ACE_ROOT="/c/ACE_wrappers
-#- export TBB_ROOT_DIR="/c/
+  - export ACE_ROOT="./ACE_wrappers"
+  - export TBB_ROOT_DIR="./tbb"
 
 #build:
-#  - powershell cmake -G "Visual Studio 16 2019" -A x64  
+  #- powershell -Command cmake 
 #powershell -Command Set-MpPreference -DisableBehaviorMonitoring \$true
