--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: cpp
+language: c#
 os: 
   - windows
 solution: ACE_wrappers_vs2019.sln
@@ -7,7 +7,7 @@ solution: ACE_wrappers_vs2019.sln
 install: 
   - powershell -Command wget "http://github.com/DOCGroup/ACE_TAO/releases/download/ACE%2BTAO-6_5_8/ACE-6.5.8.zip" -OutFile "ACE.zip"
   - powershell -Command Expand-Archive -LiteralPath ACE.zip -DestinationPath .
-  - powershell -Command Set-Content -Path '.\ACE_wrappers\ace\config.h' -Value '#include "ace/config-win32.h"'
+#  - powershell -Command Set-Content -Path '.\ACE_wrappers\ace\config.h' -Value '#include "ace/config-win32.h"'
   - powershell -Command wget "https://github.com/oneapi-src/oneTBB/releases/download/v2020.2/tbb-2020.2-win.zip" -OutFile "tbb.zip"
   - powershell -Command Expand-Archive -LiteralPath tbb.zip -DestinationPath .
 #  - choco install cmake
