--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: c++
 os: 
   - windows
-#install: 
-#  - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
+install: 
+  - msbuild="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
 #  - powershell -Command wget "http://github.com/DOCGroup/ACE_TAO/releases/download/ACE%2BTAO-6_5_8/ACE-6.5.8.zip" -OutFile "ACE.zip"
 #  - powershell -Command Expand-Archive -LiteralPath ACE.zip -DestinationPath .
 #  - powershell -Command rm Ace.zip
@@ -22,7 +22,7 @@ script:
 #  - powershell -Command cmd /c "MSBUILD_PATH /property:Configuration=Release /property:Platform=x64 .\ACE_wrappers\ACE_wrappers_vs2017.sln"
 #  - msbuild /p:Configuration=Release /p:Platform=x64 .\ACE_wrappers\ACE_wrappers_vs2017.sln
 #  - powershell -Command Get-ChildItem -Path /c/Users/travis/.travis/functions
-  - powershell -Command cmd /c "msbuild" 
+  - msbuild
 
 
 #powershell -Command Set-MpPreference -DisableBehaviorMonitoring \$true
