--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ install:
   - export TBB_ROOT_DIR=".\tbb"
 
 script:
-  - powershell -Command msbuild /property:Configuration=Release /property:Platform=x64 .\ACE_wrappers\ACE_wrappers_vs2017.sln"
+  - powershell -Command msbuild /property:Configuration=Release /property:Platform=x64 .\ACE_wrappers\ACE_wrappers_vs2017.sln
 
 #powershell -Command Set-MpPreference -DisableBehaviorMonitoring \$true
