--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,7 @@ install:
 
 script:
   - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' /property:Configuration=Release /property:Platform=x64 'C:\Users\travis\build\tonymmm1\core-windows\ACE_wrappers\ACE_wrappers_vs2017.sln'}
+  - mkdir build
+  - cd build
+  - cmake ..
+  - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' /property:Configuration=Release /property:Platform=x64  /target:ALL_BUILD:build 'C:\Users\travis\build\tonymmm1\core-windows\build\MaNGOS.sln}
