--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - export TBB_ROOT_DIR="/c/Users/travis/core-windows/tbb"
 
 script:
-  - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' /property:Configuration=Release /property:Platform=x64 /target:ACE:build 'C:\Users\travis\build\tonymmm1\core-windows\ACE_wrappers\ACE_wrappers_vs2017.sln'}
+  - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' /property:Configuration=Release /property:Platform=x64 'C:\Users\travis\build\tonymmm1\core-windows\ACE_wrappers\ACE_vs2017.sln'}
   - mkdir build
   - cd build
   - cmake ..
