--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ install:
   - export TBB_ROOT_DIR="/c/Users/travis/core-windows/tbb"
 
 script:
-  - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' -property:Configuration=Release -property:Platform=x64 -v:d 'C:\Users\travis\build\tonymmm1\core-windows\ACE_wrappers\ACE_wrappers_vs2017.sln'}
+  - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' 'C:\Users\travis\build\tonymmm1\core-windows\ACE_wrappers\ACE_wrappers_vs2017.sln' -property:Configuration=Release -property:Platform=x64 -v:d}
   - mkdir build
   - cd build
-  - cmake ..
-  - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' -property:Configuration=Release -property:Platform=x64  -v:d -target:ALL_BUILD 'C:\Users\travis\build\tonymmm1\core-windows\build\MaNGOS.sln'}
+  - cmake -DDEBUG=0 ..
+  - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' 'C:\Users\travis\build\tonymmm1\core-windows\build\MaNGOS.sln' -property:Configuration=Release -property:Platform=x64 -v:d -target:ALL_BUILD}
