--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,11 @@ install:
   - export TBB_ROOT_DIR="/c/Users/travis/core-windows/tbb"
 
 script:
-  - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' 'C:\Users\travis\build\tonymmm1\core-windows\ACE_wrappers\ACE_wrappers_vs2017.sln' -property:Configuration=Release -property:Platform=x64 -v:d}
+  - cmd
+  - 'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' 'C:\Users\travis\build\tonymmm1\core-windows\ACE_wrappers\ACE_wrappers_vs2017.sln' -property:Configuration=Release -property:Platform=x64 -v:d
+  - exit
   - mkdir build
   - cd build
   - cmake -DDEBUG=0 ..
-  - powershell -Command {'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' 'C:\Users\travis\build\tonymmm1\core-windows\build\MaNGOS.sln' -property:Configuration=Release -property:Platform=x64 -v:d -target:ALL_BUILD}
+  - cmd 
+  - 'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\MSBuild.exe' 'C:\Users\travis\build\tonymmm1\core-windows\build\MaNGOS.sln' -property:Configuration=Release -property:Platform=x64 -v:d -target:ALL_BUILD
